syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message NumberResponse {
    int32 num = 1;
}

message IntervalNumberRequest {
    int32 firstValue = 1;
    int32 lastValue = 2;
}

message Empty {}

service RemoteDBService {
    rpc getNumbers(IntervalNumberRequest) returns (stream NumberResponse);
}
